www/theme/default/style.css
/**
* The css file of ZenTaoPMS.
*
* @copyright   Copyright 2009-2015 青岛易软天创网络科技有限公司(QingDao Nature Easy Soft Network Technology Co,LTD, www.cnezsoft.com)
* @license     ZPL(http://zpl.pub/page/zplv12.html) or AGPL(https://www.gnu.org/licenses/agpl-3.0.en.html)
* @author      Chunsheng Wang <chunsheng@cnezsoft.com>
* @package     front
* @version     $Id: style.css 1454 2009-10-23 01:45:26Z wwccss $
* @link        http://www.zentao.net
*/
/* Finish task #5068*/
.main-table .table{cursor:pointer;}
.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th{background:none;}

#pageNav .btn-group.angle-btn{margin-right:10px !important;}

.main-actions .btn-toolbar .divider {margin-right:8px !important; margin-left: 8px !important;}
.main-actions .btn-toolbar .btn + .btn {margin-left: 8px !important;}

/* Pager v-align. */
.pager>li>.pager-label { padding: 2px; line-height: 21px; }

.side .leftmenu .nav-primary>li.active>a { background-color: #e7f1fc;}
.side .leftmenu .nav-primary>li.active>a:hover {background-color: #006af1;}
.label-severity:after {z-index:0 !important;}

.fixed-footer .text {color: #fff;}

a.showMoreImage {display: block; height: 30px; line-height: 30px; background: #2B85C4; position: absolute; bottom: 0px; width: 100%; opacity: 0.7; text-align: center; color:#fff;}
a.showMoreImage:hover {opacity: 1;}

.color-darkblue{background:rgb(0,0,139)}
.color-darkblue:hover{background:rgb(0,0,139)}
.color-darkblue:focus{background:rgb(0,0,139)}
.margin-l-50px{margin-left:50px;}

#mainMenu .pull-left .checkbox-primary {display: inline-block; margin-left: 10px;}
#mainMenu .pull-right > .btn-group + .btn {margin-left: 10px;}
#mainMenu .pull-right > .btn-group > .btn-icon {background: transparent;}
#mainMenu .pull-right > .btn-group > .btn-icon:hover {background: #fff;}

.table-actions .btn {background: #16a8f8; color: #fff; border-color: #16a8f8}
.table-actions > .btn-group:first-child > .btn:first-child {border-right: 1px solid rgba(255,255,255,0.2);}
.table-footer .checked+div .btn, .table-actions .btn:hover {background: #16a8f8; border-color: #16a8f8}

#userNav .dropdown-menu>li>a>.icon-w {top: 2px;}
#globalCreate .dropdown-menu {z-index: 2000;}
.create-list {min-width: 120px !important;}
.create-list>li>a {padding-left: 35px !important;}
.create-list>li>a>.icon {left: 5px !important;}

#visionSwitcher .dropdown-menu {z-index: 2000;}
#visionSwitcher .dropdown-toggle>div, #visionSwitcher>div {font-size: 14px; padding: 5px 8px; background: rgba(255,255,255, .3); border-radius: 5px;}
#visionSwitcher>div {margin: 10px 5px;}
#visionSwitcher li.switchTo {padding-top: 5px;}

.c-icon {width: 20px;}
.c-count {width: 30px;}
.c-pri {width: 40px;}
.c-severity {width: 50px;}
.c-sort, .c-progress {width: 60px;}
.c-estimate {width: 70px;}
.c-number, .c-stage, .c-role, .c-estimate-box, .c-result {width: 80px;}
.c-company, .c-budget {width: 80px;}
.c-status, .c-type, .c-user, .c-date, .c-encode, .c-resolution, .c-pri-box, .c-extend {width: 100px;}
.c-qq, .c-weixin {width: 120px;}
.c-object-type {width: 130px;}
.c-full-date, .c-mobile, .c-email, .c-text, .c-subject, .c-assigned-box, .c-user-box {width: 150px;}
.c-module, .c-date-box {width: 180px;}
.c-ip {width: 200px;}
.c-object {width: 250px;}
.c-case-step {width: 300px;}
.c-actions-8 {width: 240px;}
#userNav>li.open>a:before, #userNav>li>a:hover:before {position: absolute; bottom: 0px; left: calc(50% - 10px); width: 0; height: 0; content: ' '; border-color: transparent transparent #fff transparent; border-style: solid; border-width: 0 10px 10px 10px;}
#userNav .dropdown-menu {z-index: 2000;}
#userNav .dropdown-menu:hover + .dropdown-toggle:before {position: absolute; bottom: 0px; left: calc(50% - 10px); width: 0; height: 0; content: ' '; border-color: transparent transparent #fff transparent; border-style: solid; border-width: 0 10px 10px 10px;}
#userNav .dropdown-menu .dropdown-menu:hover:before {content: none;}
#userNav .dropdown-menu, #userNav .create-list {margin-right: -15px !important; border-top: 0px;}
#userNav .dropdown-menu .dropdown-submenu>ul {margin-right: 0px !important;}
#userNav .create-list:hover:before {right: 21.5% !important;}
#modules li>a, #modules ul>li>a {overflow: hidden; white-space: nowrap;}

.fixed-head-table{z-index:1000;}

#headerActions {position: absolute; top: 9px; right: 230px; border-right: 2px solid rgba(255, 255, 255, 0.3);}
#headerActions .btn-group > .btn{ color: #fff; margin-right: 8px; border-radius: 4px !important;}
#headerActions .btn-group > .btn.active, #headerActions .btn:active, #headerActions .open .dropdown-toggle.btn {background: rgba(0,0,0,0.15) !important;}
#headerActions #kanbanActionMenu {left: 55px}
#headerActions .setting {border-color: transparent;}
#headerActions .dropdown-menu {top: 35px; z-index: 2000;}
#headerActions .dropdown-menu:before, #headerActions .dropdown-menu:hover:before {position: absolute; top: -9px; right: 50%; width: 0; height: 0; content: ' '; border-color: transparent transparent #fff transparent; border-style: solid; border-width: 0 10px 10px 10px;}

.icon-size-width:before {content: "\e9c5"; transform: rotate(90deg); -ms-transform: rotate(90deg); -moz-transform: rotate(90deg); -webkit-transform: rotate(90deg); -o-transform: rotate(90deg);}
.checkbox-primary > label{overflow: hidden;}

body.xxc-embed {overflow-x: auto; overflow-y: hidden; height: 600px;}
.xxc-embed #header {position: fixed;top: 0;width: 100%;z-index: 10;}
.xxc-embed #toolbar {position: fixed;right: 120px!important;}
.xxc-embed #main {position: absolute;top: 50px;bottom: 0;left: 0;right: 0;overflow: auto;}
.xxc-embed .fix-table-copy-wrapper {top: 50px!important;}
.xxc-embed #headerActions {right: 310px!important;}

